<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="30dp"
    tools:context=".Detail_Screen">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_textView_label" />

        <TextView
            android:id="@+id/date_textView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_textView_templateString" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avgTemp_textView_label" />

        <TextView
            android:id="@+id/avgTemp_textView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avgTemp_textView_templateString" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_textView_label" />

        <TextView
            android:id="@+id/pressure_textView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_textView_templateString" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_textView_label" />

        <TextView
            android:id="@+id/humidity_textView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_textView_templateString" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_textView_label"/>
        <TextView
            android:id="@+id/description_textView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_textView_templateString" />
    </LinearLayout>


</LinearLayout>